intentado hacer los disparos
no salen ni queriendo necestio mas tiempo

--- a/Blood and sand/Assembly-CSharp.csproj
+++ b/Blood and sand/Assembly-CSharp.csproj
@@ -65,6 +65,8 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\Enemigos.cs" />
     <Compile Include="Assets\Scripts\cambioCamara.cs" />
+    <Compile Include="Assets\Scripts\contadores.cs" />
+    <Compile Include="Assets\Scripts\disparo.cs" />
     <Compile Include="Assets\Scripts\mover.cs" />
     <Reference Include="Unity.Timeline.Editor">
       <HintPath>C:/Users/LuisG/Documents/GitHub/BloodAndSand/Blood and sand/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
